--- a/backend/nodejs/package.json
+++ b/backend/nodejs/package.json
@@ -9,10 +9,11 @@
     "seed": "node scripts/seedUser.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
+    "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3"
   },
