--- a/backend/python/.env.example
+++ b/backend/python/.env.example
@@ -1,3 +1,5 @@
 PORT=5000
 FLASK_DEBUG=0
+MONGODB_URI=mongodb+srv://user:password@cluster.mongodb.net/coral-credit-bank
+JWT_SECRET=replace-with-long-random-string
 CORS_ORIGIN=https://your-vercel-frontend.vercel.app
